JumpScript/tests/baselines/reference/parserErrorRecovery_ParameterList6.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList6.jump(2,23): error TS2304: Cannot find name 'break'.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList6.jump (1 errors) ====
    class Foo {
        public banana (x: break) { }
                          ~~~~~
!!! error TS2304: Cannot find name 'break'.
    }